@startuml

skinparam classAttributeIconSize 0

class GetContainerRouteController{
    +getContainerSituation(containerID, registrationCode)
}

class RouteStoreDB {
    +getRouteId(databaseConnection, containerId, registrationCode)
    +getContainerSituation(databaseConnection, routeId)
}

class Company {
    -designation
    +getRouteStoreDB()
}

GetContainerRouteController ..> Company
GetContainerRouteController ..> RouteStoreDB
Company "1" -- "1" RouteStoreDB : uses >

@enduml